# confluence-updater

./: Cargo.toml  Dockerfile  README.md  confluence-config.json  confluence-config.yaml  confluence-updater.yaml  dagger.json
.dagger/: github.go  go.mod  go.sum  main.go  utils.go
.github/workflows/: build-n-release.yml  pr-on-main.yaml  release.yaml
src/: config.rs  confluence.rs  content_payload.rs  error.rs  lib.rs  main.rs  markdown.rs  page.rs  render_markdown.rs
src/confluence/: client.rs  mod.rs  page.rs  restriction.rs
