[package]
name = "confluence-updater"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "confluence-updater"
path = "src/main.rs"

[lib]
name = "confluence_updater"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.13.0", features = ["full"] }
serde_json = "1.0.69"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.25"
colored = "2.0.0"
openssl = { version = "0.10.38", features = ["vendored"] }
comrak = "0.12.1"
futures = "0.3.17"