[package]
name = "confluence-updater"
version = "2.3.2"
edition = "2021"
description = "Render Markdown files and push them to Confluence Cloud pages."
authors = ["Patrick Kerwood <patrick@kerwood.dk>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
  "multipart",
  "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
comrak = "0.47"
sha2 = "0.10.9"
hex = "0.4.3"
normalize-path = "0.2.1"
derive_more = { version = "2.0.1", features = ["debug"] }
regex = "1.12.2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
